--- a/SERVICIOS/servicios.css
+++ b/SERVICIOS/servicios.css
@@ -1,30 +1,56 @@
 @import url('https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Prompt&display=swap');
 @import url('https://api.iconify.design/ic/outline-pest-control.svg');
 
-header {
-    border:none;
-    padding:10px 10px;
-    font-family:inika;
-    text-align:left;
-    background-color: #ff5151;
+*{margin:0;
+ font-family: inika;
+}
+
+ul{
+    padding:10px;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 header img{
     width: 200px;
-    height: 100%;
+    height: 100%;  
 }
 
-h1{font-family: inika;}
 main {
-    
     background-color: #699BF7;
-    font-family: inika;
+}
+main a{
+    margin:20px;
+    padding:20px 20px;
+    font-size: large;
+}
+main p{
+    background-color: #4ECB71;
+    width: 250px;
+    height: 100%;
+    padding: 5px;
+    margin:5px 50px
 }
 .producto{
-    padding: 50px;
+    margin:20px 200px;
+    padding: 40px;
     background-color: #4ECB71;
+    display: flex;
+    justify-content:center;
+}
+main .producto{
+    font-size: larger;
+    justify-content: space-around;
+}
+.preguntas{display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
 footer{
-    font-family: inika;
+    padding: 50px;
     background-color: #ff5151;
-    text-align:center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
