--- a/HOME/home.css
+++ b/HOME/home.css
@@ -1,30 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Prompt&display=swap');
 @import url('https://api.iconify.design/ic/outline-pest-control.svg');
 
-header {
-    border:none;
-    padding:10px 10px;
-    font-family:inika;
-    text-align:left;
-    background-color: #ff5151;
+*{
+    margin:0;
+    font-family: inika;
+}
+ul{
+    padding:10px;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 header img{
     width: 200px;
-    height: 100%;
+    height: 100%;  
 }
-
-h1{font-family: inika;}
 main {
-    
     background-color: #699BF7;
-    font-family: inika;
 }
-section{
-    padding: 50px;
+main h1{
+    margin:20px;
+    padding:20px 20px;
+    font-size: large;
+}
+section{ margin:20px 200px;
+    padding: 40px;
     background-color: #4ECB71;
+    display: flex;
+    justify-content:center;
+}
+main p{
+    margin-right: 200px;
+    text-align: end;
 }
 footer{
-    font-family: inika;
+    padding: 50px;
     background-color: #ff5151;
-    text-align:center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
