--- a/HOME/home.css
+++ b/HOME/home.css
@@ -41,3 +41,12 @@ footer{
     flex-direction: row;
     justify-content: space-around;
 }
+footer img{
+    width: 40px;
+    height: 100%;
+}
+footer p{
+    display:flex;
+    flex-direction:column;
+    align-items: center;
+}
