--- a/SERVICIOS/servicios.css
+++ b/SERVICIOS/servicios.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Prompt&display=swap');
 @import url('https://api.iconify.design/ic/outline-pest-control.svg');
 
-*{margin:0;
- font-family: inika;
+*{
+    margin:0;
+    font-family:inika
 }
-
 ul{
     padding:10px;
     background-color: #ffffff;
@@ -53,4 +53,13 @@ footer{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+}
+footer img{
+    width: 40px;
+    height: 100%;
+}
+footer p{
+    display:flex;
+    flex-direction:column;
+    align-items: center;
 }
