--- a/SERVICIOS/servicios.css
+++ b/SERVICIOS/servicios.css
@@ -8,51 +8,46 @@
     margin: 0px;
     font-family: inika;
     padding: 0px;
-    box-sizing: border-box;
-
-}
+    box-sizing: border-box;}
 
 /*---------------header-------------------*/
 
-hr {
-    height: 20px;
+hr { 
     width: 100%;
-    background-color: #ff5151;
-}
-
-ul {
-    text-align: start;
-    height: 80%;
-}
+    height: 20px;
+    background-color: #ff5151;}
 
 body header ul img {
-    width: 20%;
-    height: auto;
-}
+    width: 25%;
+    height: auto;}
 
 nav {
     width: 100%;
-    height: 20%;
-}
+    height: 20%;}
 
 body header nav div img {
-    width: 18px;
-    height: 18px;
-}
+    width: 16px;
+    height: 16px;}
 
 p {
     font-size: x-small;
-    padding: 1px 5px 5px;
-}
+    padding: 1px 5px 5px;}
 
 ul {
-    margin: 5px;
+    margin: 3px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items:center;
+    text-align: start;
+    height: 80%;
+
 }
-
-
+ul div{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
 /*------------------main-------------------*/
 main {
     background-color: #699BF7;
@@ -81,7 +76,7 @@ h1 {
 .producto.p1 {
     width: 45%;
     font-size: large;
-    
+
 }
 
 .producto.p2 {
