--- a/HOME/home.css
+++ b/HOME/home.css
@@ -29,7 +29,7 @@ body header nav div img {
     height: 16px;}
 
 p {
-    font-size: x-small;
+    font-size:large;
     padding: 1px 5px 5px;}
 
 ul {
@@ -46,11 +46,64 @@ ul div{
     flex-direction: column;
     align-items: center;}
 
+@media(max-width:400px){
+    ul{
+        flex-direction:column-reverse;
+    }
+    ul div{
+        flex-direction: row;
+    }   
+}
+@media(min-width:600px){
+    p{
+        font-size: x-large;
+    }
+}
+
 /*-----------main--------------*/
 main {
     background-color: #699BF7;
     display: flex;
     flex-direction: column;}
+.box{
+    background-color: #4ECB71;
+    width:85%;
+    padding: 10px;
+    margin:15px;
+    display:flex;
+    flex-direction: row;
+    border-radius:2px;
+    align-items: center;
+
+} 
+
+.precio{
+    border-radius:5px;
+    background-color: #699BF7;
+    font-size: xx-large;
+}   
+button{
+    background-color:#ff5151;
+    width:auto;
+    height: auto;
+    padding: 5px 5px;
+    margin:5px 10px;
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    border-radius:5px;
+}
+select{
+    width:auto;
+    height:fit-content;
+    
+}
+@media(max-width:500px){
+    .box{
+        width:95%;
+        padding:5px 5px 5px 5px;
+    }
+}
 
 /*-----------footer-------------------*/
 footer{
@@ -69,7 +122,23 @@ footer img {
 }
 
 footer div {
-    padding: 5px;
-    width: 130px;
+    padding: 2px;
+    width:30%;
     text-align: center;
+    
+}
+a{
+    color:black;
+    text-decoration: none;
+}
+@media(max-width:400px){
+    footer{
+        flex-direction: column;
+        height: auto;
+    }
+    footer div{
+        width:60%;
+        padding:10px;
+    }
+       
 }
