--- a/SERVICIOS/servicios.css
+++ b/SERVICIOS/servicios.css
@@ -48,6 +48,20 @@ ul div{
     flex-direction: column;
     align-items: center;
 }
+@media(max-width:400px){
+    ul{
+        flex-direction:column-reverse;
+    }
+    ul div{
+        flex-direction: row;
+    }
+}
+@media(min-width:600px){
+    p{
+        font-size: x-large;
+    }
+}
+
 /*------------------main-------------------*/
 main {
     background-color: #699BF7;
@@ -199,4 +213,18 @@ footer div {
     padding: 5px;
     width: 130px;
     text-align: center;
+}
+a{
+    color:black;
+    text-decoration: none;
+}
+@media(max-width:400px){
+    footer{
+        flex-direction: column;
+        height: auto;
+    }
+    footer div{
+        width:60%;
+        padding:10px;
+    }
 }
