--- a/source/views/login.ejs
+++ b/source/views/login.ejs
@@ -11,11 +11,14 @@
 
 <body>
     <header>
+        <%- include('./partials/header.ejs');%>
+        <!--
         <nav>
             <hr>
             </hr>
             <img class="logo" src="../IMAGENES/LogoDeLaEmpresa.png" alt="LogoDeAM">
         </nav>
+    -->
     </header>
     <main>
         <p1>SOS CLIENTE REGULAR NUESTRO?</p1>
@@ -45,10 +48,8 @@
 
 </body>
 <footer>
-    <div class="footer"><a href="https://www.facebook.com/AMDesinfecciones/" target="_blank" style="text-decoration:none"> <img class="logoDeFace" src="../IMAGENES/facebook.png" alt="logo de face">AM DESINFECCIONES</a></div>
-    <div class="footer"><a href="https://wa.me/c/5493512262974" target="_blank" style="text-decoration:none"><img class="LogoDeWhats" src="../IMAGENES/whatsapp.png" alt="logo de wpp">+54 9 351 226-2974</a></div>
-    <div class="footer"><a href="https://www.instagram.com/amdesinfecciones/?hl=es-la" target="_blank" style="text-decoration:none"><img class="LogoDeInsta" src="../IMAGENES/instagram.png" alt="Logo de Instagram">AM DESINFECCIONES</a></div>
-
+    <%-include('./partials/footer.ejs');%>
+    
 </footer>
 
 </html>
