--- a/source/views/servicios.ejs
+++ b/source/views/servicios.ejs
@@ -13,6 +13,7 @@
 
 <body>
     <header>
+        <!--
         <nav>
             <hr></hr>
             <ul>
@@ -25,6 +26,7 @@
                 <img class="logo" src="../IMAGENES/LogoDeLaEmpresa.png" alt="LogoDeAM">
             </ul>
         </nav>
+    -->
     </header>
     <main>
         <h1>DETALLES DEL SERVICIO Y PREGUNTAS FRECUENTES</h1>
@@ -92,10 +94,7 @@
 
 </body>
 <footer>
-    <div class="footer"><a href="https://www.facebook.com/AMDesinfecciones/" target="_blank" style="text-decoration:none"> <img class="logoDeFace" src="../IMAGENES/facebook.png" alt="logo de face">AM DESINFECCIONES</a></div>
-    <div class="footer"><a href="https://wa.me/c/5493512262974" target="_blank" style="text-decoration:none"><img class="LogoDeWhats" src="../IMAGENES/whatsapp.png" alt="logo de wpp">+54 9 351 226-2974</a></div>
-    <div class="footer"><a href="https://www.instagram.com/amdesinfecciones/?hl=es-la" target="_blank" style="text-decoration:none"><img class="LogoDeInsta" src="../IMAGENES/instagram.png" alt="Logo de Instagram">AM DESINFECCIONES</a></div>
-
+    <%-include('./partials/footer.ejs');%>
 </footer>
 
 </html>
