--- a/source/views/Home.ejs
+++ b/source/views/Home.ejs
@@ -2,34 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME-AM DESINFECCIONES</title>
-    <Link rel="stylesheet" href="home.css">
+    <%-include('./partials/head.ejs');%>
 </head>
 
 <body>
     <header>
-        <!--
-        <nav>
-            <hr>
-            </hr>
-            <ul>
-                <div><img src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">
-                    <p>SERVICIOS</p>
-                </div>
-                <div><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">
-                    <p>CONTACTANOS</p>
-                </div>
-                <div><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">
-                    <p>PREGUNTAS FRECUENTES</p>
-                </div>
-                <img class="logo" src="../IMAGENES/LogoDeLaEmpresa.png" alt="LogoDeAM">
-            </ul>
-        </nav>
-        </div>
-    -->
+        <%- include('./partials/header.ejs');%>
     </header>
 
 
