--- a/source/views/login.ejs
+++ b/source/views/login.ejs
@@ -2,23 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOGin-AMDESINFECCIONES</title>
-    <link rel="stylesheet" href="login.css">
+    <%-include('./partials/head.ejs');%>
 </head>
 
 <body>
     <header>
         <%- include('./partials/header.ejs');%>
-        <!--
-        <nav>
-            <hr>
-            </hr>
-            <img class="logo" src="../IMAGENES/LogoDeLaEmpresa.png" alt="LogoDeAM">
-        </nav>
-    -->
     </header>
     <main>
         <p1>SOS CLIENTE REGULAR NUESTRO?</p1>
