--- a/source/views/login.ejs
+++ b/source/views/login.ejs
@@ -1,44 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <%-include('./partials/head.ejs');%>
+    <%- include("./partials/head.ejs") %>
 </head>
-
 <body>
-    <header>
-        <%- include('./partials/header.ejs');%>
-    </header>
+    
     <main>
         <p1>SOS CLIENTE REGULAR NUESTRO?</p1>
         <div class="ClienteRegular">
-            <p>NOMBRE DE TU NEGOCIO:</p>
-            <div class="box">
-            <input type="text"></div>
-            <p>DIRECCION DE TU NEGOCIO:</p>
-            <div class="box">
-            <input type="text"></div>
-            <div class="botones">
-            <p>ACCEDER</p></div>
+            <form action="/login" method="POST">
+                <label for="usernameOrEmail">NOMBRE DE USUARIO O NEGOCIO</label><br>
+                <input type="text" name="usernameOrEmail" id="usernameOrEmail" required> <br>
+
+                <label for="password">Contraseña</label><br>
+                <input type="password" name="password" id="password" required> <br>
+                <button type="submit">ACCEDER</button>
+
+
+            </form>
         </div>
         <p1>SOS CLIENTE NUEVO? DEJANOS TUS DATOS</p1>
         <div class="ClienteNuevo">
             <p>NOMBRE DE TU NEGOCIO:</p>
             <div class="box">
-            <input type="text"></div>
+                <input type="text">
+            </div>
             <p>DIRECCION DE TU NEGOCIO:</p>
             <div class="box">
-            <input type="text"></div>
+                <input type="text">
+            </div>
             <div class="botones">
-            <p>ACCEDER</p></div>
+                <p>ACCEDER</p>
+            </div>
         </div>
     </main>
 
 
 </body>
-<footer>
-    <%-include('./partials/footer.ejs');%>
-    
-</footer>
+
 
 </html>
