login and register code

--- a/source/views/Home.ejs
+++ b/source/views/Home.ejs
@@ -33,6 +33,7 @@
                 <option value="5">MAS DE 5 LOCALES</option></select>
             <button>MAS DETALLES</button>
         </div>
+        <a href="/logout">Cerrar Sesion</a>
     </main>
 </body>
 <footer>
