--- a/source/views/partials/header.ejs
+++ b/source/views/partials/header.ejs
@@ -11,3 +11,7 @@
     </ul>
 </nav>
 </div>
+<link rel="stylesheet" href="/login.css">
+<link rel="stylesheet" href="/home.css">
+<link rel="stylesheet" href="/carrito.css">
+<link rel="stylesheet" href="/servicios.css">
