--- a/source/views/partials/head.ejs
+++ b/source/views/partials/head.ejs
@@ -2,4 +2,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AM DESINFECCIONES</title>
-    <link rel="stylesheet" href="../../public/">
+    <link rel="stylesheet" href="/login.css">
+    <link rel="stylesheet" href="/home.css">
+    <link rel="stylesheet" href="/carrito.css">
+    <link rel="stylesheet" href="/servicios.css">
