register and login code

--- a/source/views/login.ejs
+++ b/source/views/login.ejs
@@ -26,14 +26,18 @@
         <div class="ClienteNuevo">
             <form action="/registrar" method="POST">
 
-                <label for="BusinessName">NOMBRE DE NEGOCIO</label><br>
-                <input type="text" name="BusinessName" id="BusinessName" > <br>
+                <label for="username">NOMBRE DE NEGOCIO</label><br>
+                <input type="text" name="username" id="username" > <br>
                 
-                <label for="Email">DEJANOS TU EMAIL DE CONTACTO</label><br>
-                <input type="email" name="Email" id="Email" > <br>
-
-                <label for="username">DEJANOS TU NOMBRE Y APELLIDO</label><br>
-                <input type="text" name="username" id="username"> <br>
+                <label for="password">INTRODUCE UNA CONSTRASEÑA</label><br>
+                <input type="password" name="password" id="password"> <br>
+                
+                <label for="email">DEJANOS TU EMAIL DE CONTACTO</label><br>
+                <input type="email" name="email" id="email" > <br>
+                
+                <label for="name">DEJANOS TU NOMBRE Y APELLIDO</label><br>
+                <input type="text" name="name" id="name"> <br>
+                
 
                 <button type="submit">REGISTRARSE</button>
             </form>
