--- a/source/views/partials/footer.ejs
+++ b/source/views/partials/footer.ejs
@@ -8,7 +8,7 @@
 </div>
 <div class="footer">
     <a href="https://www.instagram.com/amdesinfecciones/?hl=es-la" target="_blank" style="text-decoration:none">
-        <img class="LogoDeInsta" src="../../../IMAGENES/instagram.png" alt="Logo de Instagram">AM DESINFECCIONES</a>
+        <img class="LogoDeInsta" src="/IMAGENES/instagram.png" alt="Logo de Instagram">AM DESINFECCIONES</a>
 </div>
 <link rel="stylesheet" href="/login.css">
 <link rel="stylesheet" href="/home.css">
