--- a/source/views/partials/header.ejs
+++ b/source/views/partials/header.ejs
@@ -7,7 +7,7 @@
             <p>CONTACTANOS</p></div>
         <div><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">
             <p>PREGUNTAS FRECUENTES</p></div>
-        <img class="logo" src="../IMAGENES/LogoDeLaEmpresa.png" alt="LogoDeAM">
+        <img class="logo" src="../../../IMAGENES/LogoDeLaEmpresa.png" alt="LogoDeAM">
     </ul>
 </nav>
 </div>
