--- a/source/views/partials/footer.ejs
+++ b/source/views/partials/footer.ejs
@@ -1,14 +1,14 @@
 <div class="footer">
-    <a href="https://www.facebook.com/AMDesinfecciones/" target="_blank" style="text-decoration:none">
-        <img class="logoDeFace" src="/IMAGENES/facebook.png" alt="logo de face">AM DESINFECCIONES</a>
+    <a href="https://www.facebook.com/AMDesinfecciones/">
+        <img class="logoDeFace" src="/imagenes/facebook.png" alt="logo de face">AM DESINFECCIONES</a>
 </div>
 <div class="footer">
-    <a href="https://wa.me/c/5493512262974" target="_blank" style="text-decoration:none">
-        <img class="LogoDeWhats" src="../IMAGENES/whatsapp.png" alt="logo de wpp">+54 9 351 226-2974</a>
+    <a href="https://wa.me/c/5493512262974">
+        <img class="LogoDeWhats" src="/imagenes/whatsapp.png" alt="logo de wpp">+54 9 351 226-2974</a>
 </div>
 <div class="footer">
-    <a href="https://www.instagram.com/amdesinfecciones/?hl=es-la" target="_blank" style="text-decoration:none">
-        <img class="LogoDeInsta" src="/IMAGENES/instagram.png" alt="Logo de Instagram">AM DESINFECCIONES</a>
+    <a href="https://www.instagram.com/amdesinfecciones/?hl=es-la">
+        <img class="LogoDeInsta" src="/imagenes/instagram.png" alt="Logo de Instagram">AM DESINFECCIONES</a>
 </div>
 <link rel="stylesheet" href="/login.css">
 <link rel="stylesheet" href="/home.css">
