--- a/source/views/partials/header.ejs
+++ b/source/views/partials/header.ejs
@@ -7,7 +7,7 @@
             <p>CONTACTANOS</p></div>
         <div><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">
             <p>PREGUNTAS FRECUENTES</p></div>
-        <img class="logo" src="../../../IMAGENES/LogoDeLaEmpresa.png" alt="LogoDeAM">
+        <img class="logo" src="/imagenes/LogoDeLaEmpresa.png" alt="LogoDeAM">
     </ul>
 </nav>
 </div>
@@ -15,3 +15,4 @@
 <link rel="stylesheet" href="/home.css">
 <link rel="stylesheet" href="/carrito.css">
 <link rel="stylesheet" href="/servicios.css">
+<link rel="scripts" href="/Carrito.ejs">
