--- a/source/views/partials/head.ejs
+++ b/source/views/partials/head.ejs
@@ -1,8 +1,9 @@
 <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html">
     <title>AM DESINFECCIONES</title>
     <link rel="stylesheet" href="/login.css">
     <link rel="stylesheet" href="/home.css">
-    <link rel="stylesheet" href="/carrito.css">
+    <link type="stylesheet" href="/carrito.css">
     <link rel="stylesheet" href="/servicios.css">
