--- a/AM-FrontEnd/src/app/app.component.html
+++ b/AM-FrontEnd/src/app/app.component.html
@@ -1,23 +1,17 @@
-<app-product-list>{{ title }}</app-product-list>
-
-  <section class="container py-5">
-    <h1>{{title}}</h1>
-    
-  
-  <div *ngfor="let item of  products" 
-  class="card" >
-      <img src="..." class="card-img-top" >
-      <div class="card-body">
-        <h5 class="card-title">{{item.nombre}}</h5>
-        <p class="card-text">{{item.descripcion}}</p>
-  
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-        <!--
-  
-          <button (click)=aumentar()>+1</button>
-            <span>{{item.number  }}</span>
-            <button (click)=disminuir()>-1</button>
-          -->
+<nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">AM Desinfecciones</a>
+      
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="/add">Agregar</a>
+          </li>
+          
+        </ul>
+        
       </div>
     </div>
-  </section>
+  </nav>
+
+  <router-outlet></router-outlet>
