--- a/source/views/CARRITO.ejs
+++ b/source/views/CARRITO.ejs
@@ -27,8 +27,8 @@
         <%-include('./partials/footer.ejs')%>   
 </footer>
 
-<script src="/scripts/addCart.js" defer></script>
-<scrpt src="/scrpts/removeCart.js" defer></scrpt>
+<script src="\source\public\scripts\addCart.js"defer></script>
+
 
 
 </html>
