--- a/source/views/partials/head.ejs
+++ b/source/views/partials/head.ejs
@@ -7,3 +7,5 @@
     <link rel="stylesheet" href="/home.css">
     <link type="stylesheet" href="/carrito.css">
     <link rel="stylesheet" href="/servicios.css">
+    <script src="/scripts/event.js" defer></script>
+    
