--- a/source/views/partials/header.ejs
+++ b/source/views/partials/header.ejs
@@ -2,11 +2,11 @@
     <hr></hr>
     <ul>
         <div><img src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">
-            <p>SERVICIOS</p></div>
+            <a href="/carrito">SERVICIOS</a></div>
         <div><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">
-            <p>CONTACTANOS</p></div>
-        <div><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">
-            <p>PREGUNTAS FRECUENTES</p></div>
+            <a id="contactanos">CONTACTANOS </a></div>
+        <div ><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">
+            <a href="/servicios">PREGUNTAS FRECUENTES</a></div>
         <img class="logo" src="/imagenes/LogoDeLaEmpresa.png" alt="LogoDeAM">
     </ul>
 </nav>
@@ -16,3 +16,5 @@
 <link rel="stylesheet" href="/carrito.css">
 <link rel="stylesheet" href="/servicios.css">
 <link rel="scripts" href="/Carrito.ejs">
+<link rel="scripts" href="/home.ejs">
+
