--- a/source/public/servicios.css
+++ b/source/public/servicios.css
@@ -12,6 +12,9 @@
 
 /*---------------header-------------------*/
 
+.msj-texto{
+    background-color: aqua;
+}
 hr { 
     width: 100%;
     height: 20px;
@@ -28,6 +31,7 @@ nav {
 body header nav div img {
     width: 16px;
     height: 16px;}
+
 
 p {
     font-size: x-small;
