--- a/source/views/Home.ejs
+++ b/source/views/Home.ejs
@@ -12,29 +12,26 @@
 
 
     <main>
-        <h1>NUESTROS SERVICIOS</h1>
+        <h1>HISTORIA DE LA EMRESA</h1>
         <div class="box">
-            <p>SERVICIO DE DESINFECCION PARA UN DOMICILIO</p>
-            <div class="precio">$4.000</div>
-            <button>SOLICITAR</button>
+            <P Class="texto"> AM Desinfecciones es una empresa familiar que se dedica a realizar servicios de desinfeccion y control
+                de plagas en la ciudad de cordoba capital (Cordoba , Argentina) y alrededores.Fue fundada por Angel
+                Adrian Medina en el años 2005 , quien luego, sumo a ciertos colaboradores al trabajo , tanto familiares
+                como empleados</P>
+
         </div>
+        <H1> PUBLICO OBJETIVO</H1>
         <div class="box">
-            <p>SERVICIO DE DESINFECCION PARA UN LOCAL COMERCIAL</p>
-            <div class="precio">$2.500</div>
-            <button>SOLICITAR</button>
+            <P class="texto"> El publico al que apunta la empresa es cualquier persona mayor a 18 años que tenga un local comercial ,
+                y deba presentar una documentacion de que realizo el servicio de desinfeccion en dicho local. Tambien ,
+                puede ser que quiera realizar el servicio en su domicilio parcticular ya que tiene algun problema de
+                plagas</P>
         </div>
 
-        <div class="box">
-            <p>SERVICIO PARA PLANTAS O MAS DE UN LOCAL</p>
-            <select name="cantidad de locales" id="cant">
-                <option selected value="2">2 LOCALES</option>
-                <option value="3">3 LOCALES</option>
-                <option value="4">4 LOCALES</option>
-                <option value="5">MAS DE 5 LOCALES</option></select>
-            <button>MAS DETALLES</button>
-        </div>
+
         <a href="/logout">Cerrar Sesion</a>
     </main>
+    
 </body>
 <footer>
     <%-include('./partials/footer.ejs');%>
