--- a/source/views/partials/header.ejs
+++ b/source/views/partials/header.ejs
@@ -7,7 +7,7 @@
             <a id="contactanos">CONTACTANOS </a></div>
         <div ><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">
             <a href="/servicios">PREGUNTAS FRECUENTES</a></div>
-        <img class="logo" src="/imagenes/LogoDeLaEmpresa.png" alt="LogoDeAM">
+        <img href="/home" class="logo" src="/imagenes/LogoDeLaEmpresa.png" alt="LogoDeAM">
     </ul>
 </nav>
 </div>
