--- a/source/views/CARRITO.ejs
+++ b/source/views/CARRITO.ejs
@@ -26,8 +26,8 @@
 <footer>
         <%-include('./partials/footer.ejs')%>   
 </footer>
-
-<script src="\source\public\scripts\addCart.js"defer></script>
+<script src="/scripts/event.js" ></script>
+<script src="/scripts/addCart.js"></script>
 
 
 
