--- a/AM-FrontEnd/src/app/app.component.html
+++ b/AM-FrontEnd/src/app/app.component.html
@@ -11,7 +11,7 @@
   
   <div>
   <nav class="navbar navbar-expand-lg bg-primary">
-    <a href="#" class="navbar-brand">AM DESINFECCIONES</a>
+    <H1><a href="#" class="navbar-brand">AM DESINFECCIONES</a></H1>
     <div class="navbar-nav mr-auto">
       <li class="nav-item">
         <a routerLink="/productList" class="nav-link">LISTA DE SERVICIOS</a>
@@ -22,16 +22,21 @@
       <li class="nav-item">
         <a routerLink="/add" class="nav-link">AÑADIR SERVICIOS</a>
       </li>
+      <li class="nav-item">
+        <a routerLink="/login" class="nav-link">INICIAR SESION</a></li>
+        <li class="nav-item">
+          <a routerLink="/register" class="nav-link">REGISTRATE</a>
+        </li> 
+      
+      
       
     </div>
   </nav>
-  
   <div class="container mt-3">
     
     
   </div>
 </div>
-
 <router-outlet></router-outlet>
 
 </body>
